// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`/shouldRouteEuphrates > when should route 1`] = `
{
  "data": {
    "routerAddr": "0x6dd8372A9059254C19F4145556592eD01a5D8c06",
    "shouldRoute": true,
  },
}
`;

exports[`/shouldRouteEuphrates > when should route 2`] = `
{
  "data": {
    "routerAddr": "0x6dd8372A9059254C19F4145556592eD01a5D8c06",
    "shouldRoute": true,
  },
}
`;

exports[`/shouldRouteEuphrates > when should route 3`] = `
{
  "data": {
    "routerAddr": "0x844d07eCe43bF65bf36aa0398AeCE12641755FaA",
    "shouldRoute": true,
  },
}
`;

exports[`/shouldRouteEuphrates > when should route 4`] = `
{
  "data": {
    "routerAddr": "0x844d07eCe43bF65bf36aa0398AeCE12641755FaA",
    "shouldRoute": true,
  },
}
`;

exports[`/shouldRouteEuphrates > when should route 5`] = `
{
  "data": {
    "routerAddr": "0xCaC1D0397669E71B25410171CE6f77Af750e1B2d",
    "shouldRoute": true,
  },
}
`;

exports[`/shouldRouteEuphrates > when should route 6`] = `
{
  "data": {
    "routerAddr": "0xCaC1D0397669E71B25410171CE6f77Af750e1B2d",
    "shouldRoute": true,
  },
}
`;

exports[`/shouldRouteEuphrates > when should route 7`] = `
{
  "data": {
    "routerAddr": "0x274d69D18Ec8d3b9d3E6732013DeB57E4Cf89Be8",
    "shouldRoute": true,
  },
}
`;

exports[`/shouldRouteEuphrates > when should route 8`] = `
{
  "data": {
    "routerAddr": "0x274d69D18Ec8d3b9d3E6732013DeB57E4Cf89Be8",
    "shouldRoute": true,
  },
}
`;

exports[`/shouldRouteEuphrates > when should route 9`] = `
{
  "data": {
    "routerAddr": "0x825E69D8f27010d8e5D4e96913A8571221373789",
    "shouldRoute": true,
  },
}
`;

exports[`/shouldRouteEuphrates > when should route 10`] = `
{
  "data": {
    "routerAddr": "0x825E69D8f27010d8e5D4e96913A8571221373789",
    "shouldRoute": true,
  },
}
`;
